Added initial implementation of Phase Field system